--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,26 +2,81 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
+.slide-top {
+  -webkit-animation: slide-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+  animation: slide-top 0.9s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@-webkit-keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
+
+  100% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
+@keyframes slide-top {
+  0% {
+    -webkit-transform: translateY(0);
+    transform: translateY(0);
+  }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  100% {
+    -webkit-transform: translateY(-100px);
+    transform: translateY(-100px);
   }
 }
+
+.animate-rub-effect {
+  animation: rub 2s ease-in-out infinite;
+}
+
+@keyframes rub {
+  0% {
+    opacity: 1;
+  }
+
+  30% {
+    opacity: 0.6;
+  }
+
+  60% {
+    opacity: 0.6;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
+
+
+
+
+
+.blog_card:hover{
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 48px 100px 0px;
+}
+/* Global CSS styles */
+
+
+
+
+@media screen and (max-width: 700px) {
+  .blog_card{
+      width: 260px;
+  }
+}
+
+@media screen and (max-width: 550px)  {
+  .blog_card{
+      width: 350px;
+  }
+  .parentDiv{
+      width: 90%;
+  }
+}
+
